# katha-test-1

./: .env.example  .gitignore  README.md  pyproject.toml  world.yaml
.claude/: claude.md
.claude/commands/: commit.md  inconsistencies.md
characters/: cu-cullan.yaml  em-emer.yaml  ha-hansel.yaml
docs/: image-generation.md
images/: README.md
out-images/: README.md
pages/: cu-01.yaml  cu-03.yaml  cu-04.yaml  cu-05.yaml  cu-06.yaml  cu-07.yaml  cu-08.yaml  cu-09.yaml  cu-10.yaml  cu-11.yaml  cu-12.yaml  cu-em-01.yaml  cu-em-05.yaml  cu-em-06.yaml  cu-ha-01.yaml  cu-ha-02.yaml  em-01.yaml  em-02.yaml  em-03.yaml  em-04.yaml  em-06.yaml  em-08.yaml  em-09.yaml  em-10.yaml  em-11.yaml  em-12.yaml  em-13.yaml  em-14.yaml  em-15.yaml  em-16.yaml  em-17.yaml  em-18.yaml  em-19.yaml  em-20.yaml  em-21.yaml  em-22.yaml  em-23.yaml  em-24.yaml  em-25.yaml  em-26.yaml  (+24 more)
ref-images/: README.md
scripts/: gen_all_images.py  gen_image.py  pull-from-base.sh  show_story.py  validate_structure.py
temp/: gen_image.py
templates/: book-example.yaml  character-example.yaml  page-example.yaml  story-template.yaml  world-example.yaml
